tests/baselines/reference/interfaceImplementation4.errors.txt
==== tests/cases/compiler/interfaceImplementation4.ts (1 errors) ====
    interface I1 {
        iObj:{ };
        iNum:number;
        iAny:any;
        iFn():void;
    }
    
    class C5 implements I1 {
          ~~
!!! interfaceImplementation4.ts(8,7): error TS2137: Class C5 declares interface I1 but does not implement it:
!!! 	Type 'C5' is missing property 'iObj' from type 'I1'.
        public iNum:number;
        public iAny:any;
        public iFn() { }
    }
    